k8s/user-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-mysql
  template:
    metadata:
      labels:
        app: user-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
            - name: initdb
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: user-mysql-pvc
        - name: initdb
          configMap:
            name: user-mysql-init
