k8s/user-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neuroapp-mysql
spec:
  selector:
    app: user-mysql
  ports:
    - port: 3306
      targetPort: 3306
