k8s/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-manager
spec:
  selector:
    app: user-manager
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
