k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-manager-ingress
  annotations:
    nginx.ingress.kubernetes.io: /
spec:
  rules:
    - host: api.neuroppavalia.com
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-manager
                port:
                  number: 3000
